k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: content-audit
  labels:
    name: content-audit
